solve overflow issues on home page

--- a/src/Home/Home.styles.css
+++ b/src/Home/Home.styles.css
@@ -1,12 +1,13 @@
 /* Add these styles to your CSS file */
 .Home {
-    background-color:whitesmoke; /* Background color */
-    color: #000000; /* Text color */
-    padding: 20px; /* Add padding to the content */
+    background-color:whitesmoke; 
+    color: #000000; 
+    padding: 20px;
+    height: 100%;
   }
   
   .Home p {
-    font-size: 18px; /* Adjust the font size */
+    font-size: 18px; 
     margin-top: 2rem;
   }
   
